compiler/tests/fixtures/invalid/semantics/reference_undefined_role.viv
// Invalid: references undefined role in effects

action bad-ref:
    roles:
        @actor:
            as: initiator
    effects:
        @ghost.mood = 5
